<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProcessingActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:textSize="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/processing"/>

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="14dp"
        android:layout_marginTop="200dp"
        android:textStyle="italic"
        android:text="@string/translation_is_in_progress_n_please_wait_a_moment"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lt_processing"
        android:layout_width="80dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@+id/content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        android:layout_marginTop="16dp"
        app:lottie_rawRes="@raw/processing"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/rl_native"
        android:layout_marginBottom="8dp"
        android:layout_marginHorizontal="16dp"
        android:visibility="visible"
        android:text="@string/check_my_result"/>

    <RelativeLayout
        android:id="@+id/rl_native"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_goneMarginTop="@dimen/_4sdp">

        <FrameLayout
            android:id="@+id/fr_native_ads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/ads_native_shimmer" />
        </FrameLayout>
    </RelativeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>